Refactor button styles in App.css and SideMenu index.css for consistency

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 .live-button {
     font-size: 1rem;
     padding: unset !important;
+    border-radius: unset !important;
     color: black;
     background-color: grey;
     border: none;
