--- a/src/routes/Orrery/components/SideMenu/index.css
+++ b/src/routes/Orrery/components/SideMenu/index.css
@@ -47,4 +47,6 @@
     writing-mode: vertical-lr;
     width: 2rem;
     height: 60px;
+    padding: unset !important;
+    border-radius: unset !important;
 }
