--- a/src/routes/Orrery/components/SideMenu/index.css
+++ b/src/routes/Orrery/components/SideMenu/index.css
@@ -1,50 +1,85 @@
 .side-menu-wrapper {
-    position: relative;
-    top: 0;
-    left: -300px;
-    width: 300px;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 10;
-    backdrop-filter: blur(2px);
+  position: relative;
+  top: 0;
+  left: -300px;
+  width: 300px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+  backdrop-filter: blur(2px);
 }
 
 .side-menu-wrapper.show {
-    left: 0;
+  left: 0;
 }
 
 .side-menu {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 1rem;
-    box-sizing: border-box;
-    gap: 1rem;
-    height: 100%;
-    overflow: auto;
-    z-index: 10;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 1rem;
+  box-sizing: border-box;
+  gap: 1rem;
+  height: 100%;
+  overflow: auto;
+  z-index: 10;
 }
 .side-menu > *:last-child::after {
-    content: '';
-    display: block;
-    height: 1rem;
-    flex-shrink: 0;
+  content: "";
+  display: block;
+  height: 1rem;
+  flex-shrink: 0;
 }
 
-
 .side-menu-toggler {
-    position: absolute;
-    top: 50%;
-    left: 100%;
-    transform: translate(0, -50%);
-    font-size: 1rem;
-    color: black;
-    background-color: white;
-    border: none;
-    cursor: pointer;
-    writing-mode: vertical-lr;
-    width: 2rem;
-    height: 60px;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translate(0, -50%);
+  font-size: 1rem;
+  color: black;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  writing-mode: vertical-lr;
+  width: 2rem;
+  height: 60px;
+}
+
+.slider-input-wrapper {
+  height: fit-content;
+  width: min(40vw, 400px);
+  background-color: #222222;
+  bottom: min(50vh, 500px);
+  right: 5px;
+  position: absolute;
+  z-index: 11;
+}
+.slider-input-wrapper input[type="range"] {
+  width: 200px;
+  height: 30px;
+  font-size: 18px;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  color: blue;
+  background: green;
+}
+input[type="range"]::-moz-range-track {
+  color: blue;
+
+  background: green;
+}
+
+.slider-title-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: large;
+  font-weight: 500;
+}
+
+.slider-title-wrapper .slider-title-name {
+  font-weight: 700;
 }
